mdapipkg/unpackaged/objects/Available_Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descriptions__c</fullName>
        <label>Descriptions</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Id__c</fullName>
        <label>Library Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotions__c</fullName>
        <label>Promotions</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Available Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Available Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Available Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>